{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 145,
  "lineage": "b371d65d-7fd5-9556-9a91-5836bf9ab1f0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:470507049399:loadbalancer/app/simple-time-service-alb/c6804f5f2a141894",
            "arn_suffix": "app/simple-time-service-alb/c6804f5f2a141894",
            "desync_mitigation_mode": "defensive",
            "dns_name": "simple-time-service-alb-1360529642.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:470507049399:loadbalancer/app/simple-time-service-alb/c6804f5f2a141894",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "simple-time-service-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e54233d97f3c550f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00b76a7552a3c8f72"
              },
              {
                "subnet_id": "subnet-0d4e337f1c4e079a9"
              }
            ],
            "subnets": [
              "subnet-00b76a7552a3c8f72",
              "subnet-0d4e337f1c4e079a9"
            ],
            "tags": {
              "Environment": "dev",
              "Project": "simple-time-service"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "simple-time-service"
            },
            "vpc_id": "vpc-08a7ed0ca9776d37c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.lb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:470507049399:listener/app/simple-time-service-alb/c6804f5f2a141894/d24f426dc09d65f0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:470507049399:targetgroup/simple-time-service-tg/22d8deff51fa81dd",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:470507049399:listener/app/simple-time-service-alb/c6804f5f2a141894/d24f426dc09d65f0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:470507049399:loadbalancer/app/simple-time-service-alb/c6804f5f2a141894",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.app",
            "aws_security_group.lb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:470507049399:targetgroup/simple-time-service-tg/22d8deff51fa81dd",
            "arn_suffix": "targetgroup/simple-time-service-tg/22d8deff51fa81dd",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:470507049399:targetgroup/simple-time-service-tg/22d8deff51fa81dd",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "simple-time-service-tg",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-08a7ed0ca9776d37c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470507049399:security-group/sg-05327dc3cf6a7a7a3",
            "description": "Allow inbound from ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05327dc3cf6a7a7a3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e54233d97f3c550f"
                ],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "simple-time-service-ecs-tasks-sg",
            "name_prefix": "",
            "owner_id": "470507049399",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Project": "simple-time-service"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "simple-time-service"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a7ed0ca9776d37c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470507049399:security-group/sg-0e54233d97f3c550f",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e54233d97f3c550f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "simple-time-service-alb-sg",
            "name_prefix": "",
            "owner_id": "470507049399",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Project": "simple-time-service"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "simple-time-service"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a7ed0ca9776d37c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0faa7d5934d03a4d7",
            "domain": "vpc",
            "id": "eipalloc-0faa7d5934d03a4d7",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-203-225-28.compute-1.amazonaws.com",
            "public_ip": "52.203.225.28",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "simple-time-service-vpc-us-east-1a",
              "Project": "simple-time-service"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "simple-time-service-vpc-us-east-1a",
              "Project": "simple-time-service"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470507049399:internet-gateway/igw-0d1298874a36c512f",
            "id": "igw-0d1298874a36c512f",
            "owner_id": "470507049399",
            "tags": {
              "Environment": "dev",
              "Name": "simple-time-service-vpc",
              "Project": "simple-time-service"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "simple-time-service-vpc",
              "Project": "simple-time-service"
            },
            "vpc_id": "vpc-08a7ed0ca9776d37c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0faa7d5934d03a4d7",
            "association_id": "eipassoc-06a736fb09665006e",
            "connectivity_type": "public",
            "id": "nat-075973853c7c33a6e",
            "network_interface_id": "eni-07524d5ced0f74019",
            "private_ip": "10.0.1.70",
            "public_ip": "52.203.225.28",
            "subnet_id": "subnet-00b76a7552a3c8f72",
            "tags": {
              "Environment": "dev",
              "Name": "simple-time-service-vpc-us-east-1a",
              "Project": "simple-time-service"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "simple-time-service-vpc-us-east-1a",
              "Project": "simple-time-service"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-099913c7d2a0ca1901080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-075973853c7c33a6e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-099913c7d2a0ca190",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d1298874a36c512f",
            "id": "r-rtb-0492cc63a6d9f326c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0492cc63a6d9f326c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470507049399:route-table/rtb-099913c7d2a0ca190",
            "id": "rtb-099913c7d2a0ca190",
            "owner_id": "470507049399",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "simple-time-service-vpc-private",
              "Project": "simple-time-service"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "simple-time-service-vpc-private",
              "Project": "simple-time-service"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a7ed0ca9776d37c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470507049399:route-table/rtb-0492cc63a6d9f326c",
            "id": "rtb-0492cc63a6d9f326c",
            "owner_id": "470507049399",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "simple-time-service-vpc-public",
              "Project": "simple-time-service"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "simple-time-service-vpc-public",
              "Project": "simple-time-service"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a7ed0ca9776d37c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-038306009c1772a76",
            "route_table_id": "rtb-099913c7d2a0ca190",
            "subnet_id": "subnet-004c9d193287f4f87"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cced5c679de4930b",
            "route_table_id": "rtb-099913c7d2a0ca190",
            "subnet_id": "subnet-0d014c8395ca7f505"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cda1508885d49e78",
            "route_table_id": "rtb-0492cc63a6d9f326c",
            "subnet_id": "subnet-00b76a7552a3c8f72"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00449ea5b9e6bf52a",
            "route_table_id": "rtb-0492cc63a6d9f326c",
            "subnet_id": "subnet-0d4e337f1c4e079a9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470507049399:subnet/subnet-004c9d193287f4f87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004c9d193287f4f87",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "470507049399",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "simple-time-service-vpc-private-us-east-1a",
              "Project": "simple-time-service"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "simple-time-service-vpc-private-us-east-1a",
              "Project": "simple-time-service"
            },
            "vpc_id": "vpc-08a7ed0ca9776d37c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470507049399:subnet/subnet-0d014c8395ca7f505",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d014c8395ca7f505",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "470507049399",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "simple-time-service-vpc-private-us-east-1b",
              "Project": "simple-time-service"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "simple-time-service-vpc-private-us-east-1b",
              "Project": "simple-time-service"
            },
            "vpc_id": "vpc-08a7ed0ca9776d37c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470507049399:subnet/subnet-00b76a7552a3c8f72",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b76a7552a3c8f72",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "470507049399",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "simple-time-service-vpc-public-us-east-1a",
              "Project": "simple-time-service"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "simple-time-service-vpc-public-us-east-1a",
              "Project": "simple-time-service"
            },
            "vpc_id": "vpc-08a7ed0ca9776d37c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470507049399:subnet/subnet-0d4e337f1c4e079a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d4e337f1c4e079a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "470507049399",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "simple-time-service-vpc-public-us-east-1b",
              "Project": "simple-time-service"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "simple-time-service-vpc-public-us-east-1b",
              "Project": "simple-time-service"
            },
            "vpc_id": "vpc-08a7ed0ca9776d37c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470507049399:vpc/vpc-08a7ed0ca9776d37c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f85cf6f4be0ad89b",
            "default_route_table_id": "rtb-0ab2c7171271e92b0",
            "default_security_group_id": "sg-0118771b504fc2be4",
            "dhcp_options_id": "dopt-04c61fb7ae9e72e80",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08a7ed0ca9776d37c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ab2c7171271e92b0",
            "owner_id": "470507049399",
            "tags": {
              "Environment": "dev",
              "Name": "simple-time-service-vpc",
              "Project": "simple-time-service"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "simple-time-service-vpc",
              "Project": "simple-time-service"
            }
          }
        }
      ]
    }
  ]
}